@@ -23,30 +23,31 @@ class Roda
     module DefaultHeaders
       # Merge the given headers into the existing default headers, if any.
       def self.configure(app, headers={})
-        headers = app.opts[:default_headers] = (app.default_headers || app::RodaResponse::DEFAULT_HEADERS).merge(headers).freeze
-
-        if headers.all?{|k, v| k.is_a?(String) && v.is_a?(String)}
-          response_class = app::RodaResponse
-          owner = response_class.instance_method(:set_default_headers).owner
-          if owner == Base::ResponseMethods || (owner == response_class && app.opts[:set_default_headers_overridder] == response_class)
-            app.opts[:set_default_headers_overridder] = response_class
-            response_class.class_eval(<<-END, __FILE__, __LINE__+1)
-              private
-
-              alias set_default_headers set_default_headers
-              def set_default_headers
-                h = @headers
-                #{headers.map{|k,v| "h[#{k.inspect}] ||= #{v.inspect}"}.join('; ')}
-              end
-            END
-          end
-        end
+        app.opts[:default_headers] = (app.default_headers || app::RodaResponse::DEFAULT_HEADERS).merge(headers).freeze
       end 
 
       module ClassMethods
         # The default response headers to use for the current class.
         def default_headers
           opts[:default_headers]
+        end
+
+        # Optimize the response class set_default_headers method if it hasn't been
+        # overridden and all default headers are strings.
+        def freeze
+          if (headers = opts[:default_headers]).all?{|k, v| k.is_a?(String) && v.is_a?(String)} &&
+             (self::RodaResponse.instance_method(:set_default_headers).owner == Base::ResponseMethods)
+            self::RodaResponse.class_eval(<<-END, __FILE__, __LINE__+1)
+              private
+
+              def set_default_headers
+                h = @headers
+                #{headers.map{|k,v| "h[#{k.inspect}] ||= #{v.inspect}"}.join('; ')}
+              end
+            END
+          end
+
+          super
         end
       end
 
