@@ -1,3 +1,7 @@
+= master
+
+* [SECURITY] Fix issue where loading content_security_policy plugin after default_headers plugin had no effect (jeremyevans)
+
 = 3.43.0 (2021-04-12)
 
 * Add host_authorization plugin, for checking that requests are submitted using an approved host (jeremyevans)
